--- a/index.html
+++ b/index.html
@@ -371,14 +371,13 @@ body.kb-open #refreshNotice{display:none!important}
    CONFIG (defaults; overridden by config.js)
    ========================================================================= */
 let SHOW_UPDATE_LOG = true;
-let CURRENT_VERSION = "2.14";
+let CURRENT_VERSION = "2.15";
 let UPDATE_NOTES_HTML = `
    <p><b>MyMathsHomework v\${CURRENT_VERSION}</b></p>
    <p><b>Updates are useful to fix up known issues.</b></p>
   <ul>
     <li>Fixed: Issues with backend code</li>
-    <li>Soon: Soundboards</li>
-    <li>Soon: More games.</li>
+    <li>Added: Soundboards</li>
     <li>NOTE: Games DON'T save if you refresh. (Known issue)</li>
   </ul>
 `;
